--- a/ClipboardFetcher/ClipboardFetcher.csproj
+++ b/ClipboardFetcher/ClipboardFetcher.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="GenerateSlug.cs" />
+    <Compile Include="GenerateSlugExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
